doc: prevent line wrapping in API request and response code
This change ensures that the API endpoint request and response code do
not wrap onto multiple lines. Additionally, it highlights the JSON code
in the response.

For #1233

--- a/doc/src/css/style.css
+++ b/doc/src/css/style.css
@@ -111,7 +111,7 @@ nav.sections a.selected { border-bottom: 2px solid #4f46e5; }
 .article .api-spec { border-bottom: 1px solid #d8dee4; padding: 40px 0; }
 .article h1 + .api-spec { padding-top: 0; }
 .article .api-spec:first-of-type { margin-top: 0; }
-.article .api-spec .spec { align-items: start; box-sizing: border-box; column-gap: min(3rem, 5vw); display: grid; grid-template-columns: repeat(2, 1fr); row-gap: 2.5vw; overflow-y: scroll; }
+.article .api-spec .spec { align-items: start; box-sizing: border-box; column-gap: min(3rem, 5vw); display: grid; grid-template-columns: repeat(2, 1fr); row-gap: 2.5vw; }
 .article .api-spec .spec > :nth-child(2) { box-sizing: border-box; display: flex; flex-direction: column; gap: 16px; position: sticky; top: 10px; }
 
 .article .api-spec .endpoints-box { border-radius: 10px; border: 1px solid #d8dee4; background: #f5f6f8; width: 100%; font-size: .9em; }
@@ -131,18 +131,19 @@ nav.sections a.selected { border-bottom: 2px solid #4f46e5; }
 .article .api-spec .api-request-box > :nth-child(1) span.api-method-post { color: #4BCA2E; }
 .article .api-spec .api-request-box > :nth-child(1) span.api-method-put { color: #C084FF; }
 .article .api-spec .api-request-box > :nth-child(1) span.api-method-delete { color: #FF9926; }
-.article .api-spec .api-request-box > :nth-child(2) { background: #3e444f; color: #fff; counter-reset: fence-line-counter; font-family: Courier New, Courier, monospace; font-size: 14px; padding: 8px 20px 8px 20px; }
+.article .api-spec .api-request-box > :nth-child(2) { background: #3e444f; border-radius: 0; color: #fff; counter-reset: fence-line-counter; font-family: Courier New, Courier, monospace; font-size: 14px; padding: 8px 20px 8px 20px; }
 .article .api-spec .api-request-box > :nth-child(2) > div::before { color: #A9B2C2; content: counter(fence-line-counter); counter-increment: fence-line-counter 1; display: inline-block; padding-right: 12px; text-align: right; width: 20px; }
 .article .api-spec .api-request-box .copy-request { cursor: pointer; float: right; }
-.article .api-spec .api-request-box code { white-space: normal; }
+.article .api-spec .api-request-box code { overflow-x: scroll; white-space: nowrap; width: 457px; }
 .article .api-spec .api-request-box span { color: #4BCA2E; }
 
 .article .api-spec .api-response-box { border: 1px solid #d8dee4; border-radius: 10px; flex-direction: column; font-size: .9em; overflow: hidden; width: 100%; }
-.article .api-spec .api-response-box > :nth-child(1) { background: #ebeef1; border-bottom: 1px solid #d8dee4; color: #353A44; font-size: .9em; font-weight: bold; padding: 12px 12px 8px 12px; text-transform: uppercase; width: 100%; }
-.article .api-spec .api-response-box > :nth-child(2) { background: #f5f6f8; color: #353A44; font-family: Courier New, Courier, monospace; font-size: 14px; overflow-wrap: break-word; padding: 8px 20px 8px 20px; white-space: pre-wrap; }
+.article .api-spec .api-response-box > :nth-child(1) { background: #ebeef1; border-bottom: 1px solid #d8dee4; color: #353A44; font-size: .9em; font-weight: bold; padding: 10px 12px; text-transform: uppercase; width: 100%; }
+.article .api-spec .api-response-box > :nth-child(2) pre { margin: 0; padding: 0; }
+.article .api-spec .api-response-box > :nth-child(2) pre code { background: #f5f6f8; color: #353A44; font-family: Courier New, Courier, monospace; font-size: 14px; padding: 8px 20px 8px 20px; width: 455px; white-space: pre; }
 
 .article .api-spec .api-errors-box { border: 1px solid #d8dee4; border-radius: 10px; flex-direction: column; font-size: .9em; width: 100%; }
-.article .api-spec .api-errors-box > :nth-child(1) { background: #ebeef1; border-bottom: 1px solid #d8dee4; color: #353A44; font-size: .9em; font-weight: bold; padding: 12px 12px 8px 12px; text-transform: uppercase; width: 100%; }
+.article .api-spec .api-errors-box > :nth-child(1) { background: #ebeef1; border-bottom: 1px solid #d8dee4; color: #353A44; font-size: .9em; font-weight: bold; padding: 10px 12px; text-transform: uppercase; width: 100%; }
 .article .api-spec .api-errors-box > :nth-child(2) { background: #f5f6f8; color: #4A515C; display: grid; font-size: 14px; gap: 8px; grid-template-columns: auto 1fr; padding: 8px 20px 8px 20px; }
 .article .api-spec .api-errors-box > :nth-child(2) .row { cursor: pointer; display: contents; }
 .article .api-spec .api-errors-box > :nth-child(2) .status[data-status="404"] { color: #D66E00; }
